--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: app
-description: "A new Flutter project."
+description: "POC flutter beacon scan project."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -15,7 +15,7 @@ dependencies:
   intl: ^0.17.0
   geolocator: ^11.0.0
   bot_toast: ^4.1.3
-  flutter_background_service:
+  flutter_background_service: ^5.0.1
   flutter_background_service_android: 6.0.1
   beacon_scanner: ^0.0.4
   bluetooth_enable_fork: ^0.1.6
